[project]
name = "my-vacation"
version = "0.1.0"
description = ""
authors = [
    {name = "uie27176"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "my_vacation", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
