[project]
name = "my-vacation"
version = "0.1.0"
description = ""
authors = [
    {name = "uie27176"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "openai (>=1.99.9,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "my_vacation", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
